# backend/internal/handlers/interfaces/api_leaderboard.gen.go
@@ -1,0 +1,7 @@
+package interfaces
+
+import "github.com/gin-gonic/gin"
+
+type LeaderboardAPIHandler interface {
+	ListLeaderboard(c *gin.Context)
+}
