# backend/internal/handlers/interfaces/api_progress.gen.go
@@ -1,0 +1,7 @@
+package interfaces
+
+import "github.com/gin-gonic/gin"
+
+type ProgressAPIHandler interface {
+	GetProgress(c *gin.Context)
+}
