# backend/internal/handlers/routers.gen.go
@@ -18,13 +18,13 @@ import (
 // Route is the information for every URI.
 type Route struct {
 	// Name is the name of this Route.
-	Name string
+	Name		string
 	// Method is the string for the HTTP method. ex) GET, POST etc..
-	Method string
+	Method		string
 	// Pattern is the pattern of the URI.
-	Pattern string
+	Pattern	 	string
 	// HandlerFunc is the handler function of this route.
-	HandlerFunc gin.HandlerFunc
+	HandlerFunc	gin.HandlerFunc
 }
 
 // NewRouter returns a new router.
@@ -70,16 +70,20 @@ type ApiHandleFunctions struct {
 	EvidencesAPI EvidencesAPI
 	// Routes for the HealthAPI part of the API
 	HealthAPI HealthAPI
+	// Routes for the LeaderboardAPI part of the API
+	LeaderboardAPI LeaderboardAPI
 	// Routes for the MediaAPI part of the API
 	MediaAPI MediaAPI
 	// Routes for the ProfileAPI part of the API
 	ProfileAPI ProfileAPI
+	// Routes for the ProgressAPI part of the API
+	ProgressAPI ProgressAPI
 	// Routes for the UnitsAPI part of the API
 	UnitsAPI UnitsAPI
 }
 
 func getRoutes(handleFunctions ApiHandleFunctions) []Route {
-	return []Route{
+	return []Route{ 
 		{
 			"GetActivityDetail",
 			http.MethodGet,
@@ -153,6 +157,12 @@ func getRoutes(handleFunctions ApiHandleFunctions) []Route {
 			handleFunctions.HealthAPI.Readyz,
 		},
 		{
+			"ListLeaderboard",
+			http.MethodGet,
+			"/leaderboard",
+			handleFunctions.LeaderboardAPI.ListLeaderboard,
+		},
+		{
 			"UploadMedia",
 			http.MethodPost,
 			"/media/upload",
@@ -169,6 +179,12 @@ func getRoutes(handleFunctions ApiHandleFunctions) []Route {
 			http.MethodPatch,
 			"/profile",
 			handleFunctions.ProfileAPI.UpdateProfile,
+		},
+		{
+			"GetProgress",
+			http.MethodGet,
+			"/progress",
+			handleFunctions.ProgressAPI.GetProgress,
 		},
 		{
 			"ListUnits",
